--- a/final.css
+++ b/final.css
@@ -33,6 +33,16 @@ h3 {
         margin-right: 5%;
         margin-left: 5%;
     }
+    #button {
+	text-align: center;
+	font-size: 20px;
+	background-color: #3C474B;
+	color: #C0E0DE;
+	font-weight: bold;
+	padding: 12px;
+	width: 20%;
+	margin-left: 42%;
+}
 .oswald-subhead {
   font-family: "Oswald", sans-serif;
   font-optical-sizing: auto;
@@ -45,15 +55,22 @@ h3 {
 @media only screen and (max-width: 767px)
 {
  .list {
- 	float: right;
+ 	border-block: 2px solid darkgray;
+ 	padding: 10px;
+ 	float: none;
  	min-width: 90%;
- 	margin-left: 5px;
+ 	margin-left: 10px;
  	margin-bottom: 30px;
  	margin-top: 30px;
- 	margin margin-right: 5px;
+ }
  }
  iframe {
  	min-width: 90%;
  	margin-right: 10px;
  }
+.footer p { /* This is how you add styles for only the p text within the footer. */
+	background-color: #skyblue;
+	text-align: center;
+	font-size: 15px;
+	margin-bottom: 0;
 }
