--- a/final/final.css
+++ b/final/final.css
@@ -1,39 +1,45 @@
 /*This is the CSS page for our final template.*/
-    p {
-        font-family: 'Times New Roman', serif;
-        font-size: 20px;
-    }
-.footer p { /* This is how you add styles for only the p text within the footer. */
-	background-color: #F0CEA0;
-	text-align: center;
+
+p {
 	font-family: 'Times New Roman', serif;
-	font-size: 15px;
+	font-size: 20px;
+}
+.footer p { /* This is how you add styles for only the p text within the footer. */
+	background-color:#F0CEA0;
+	text-align: center;
+	font-size: 20px;
 	margin-bottom: 0;
 }
 .header {
 	height: auto;
 	font-weight: bold;
-	font-size: 40px;
+	font-size: 50px;
 	text-align: center;
-	font-family: 'Times New Roman', serif;
+	font-family: 'Georgia', serif;
 	background-color: #F0CEA0;
+	color: #black;
 }
-h4 {
+h2 {
 	font-style: italic;
 	font-size: 40px;
-	font-family: 'Times New Roman', serif;
+	font-family: 'Georgia', serif;
 }
 h3 {
-	font-family: 'Oswald', sans-serif;
-	font-size: 40px;
+	font-size: 30px;
+	font-family: 'Oswald', serif;
 }
 
- img {
-        float: right;
-        margin-right: 5%;
-        margin-left: 5%;
-    }
-    #button {
+h4 {
+	font-size: 20px;
+}
+
+
+img {
+	float: right;
+	margin-left: 5%;
+	margin-right: 5%;
+}
+#button {
 	text-align: center;
 	font-size: 20px;
 	background-color: #3C474B;
@@ -43,13 +49,13 @@ h3 {
 	width: 20%;
 	margin-left: 42%;
 }
+
 .oswald-subhead {
   font-family: "Oswald", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: <weight>;
   font-style: normal;
 }
-
 
 /*Don't worry about this section yet*/
 @media only screen and (max-width: 767px)
@@ -63,7 +69,6 @@ h3 {
  	margin-bottom: 30px;
  	margin-top: 30px;
  }
- }
  iframe {
  	min-width: 90%;
  	margin-right: 10px;
@@ -71,6 +76,6 @@ h3 {
 .footer p { /* This is how you add styles for only the p text within the footer. */
 	background-color: #skyblue;
 	text-align: center;
-	font-size: 15px;
+	font-size: 20px;
 	margin-bottom: 0;
 }
